--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,47 +1,26 @@
 {
-  "name": "SVELTE-PWA",
-  "short_name": "SVELTE-PWA",
+  "short_name": "Expense Tracker",
+  "name": "Expense Tracker",
   "icons": [
     {
-      "src": "/images/icons/icon-128x128.png",
-      "sizes": "128x128",
-      "type": "image/png"
-    }, 
-    {
-      "src": "/images/icons/icon-144x144.png",
-      "sizes": "144x144",
-      "type": "image/png"
-    }, 
-    {
-      "src": "/images/icons/icon-152x152.png",
-      "sizes": "152x152",
-      "type": "image/png"
-    }, 
-    {
-      "src": "/images/icons/icon-192x192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    }, 
-    {
-      "src": "/images/icons/icon-256x256.png",
-      "sizes": "256x256",
-      "type": "image/png"
-    }, 
-    {
-      "src": "/images/icons/icon-512x512.png",
-      "sizes": "512x512",
-      "type": "image/png"
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     },
     {
-      "src": "/images/icons/maskable_icon.png",
-      "sizes": "640x640",
+      "src": "logo192.png",
       "type": "image/png",
-      "purpose": "any maskable"
+      "sizes": "192x192"
+    },
+    {
+      "src": "logo512.png",
+      "type": "image/png",
+      "sizes": "512x512"
     }
   ],
-  "start_url": "/",
-  "display_override": ["fullscreen", "minimal-ui"],
+  "start_url": ".",
   "display": "standalone",
-  "background_color": "#3E4EB8",
-  "theme_color": "#2F3BA2"
+  "display_override": ["fullscreen", "minimal-ui"],
+  "theme_color": "#242424",
+  "background_color": "#242424"
 }
